Use kotlin + basic gui